fix: popup on mobile

--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -10,7 +10,7 @@
     max-width: 360px;
     box-shadow: 4px 4px 12px rgba(59, 55, 72, 0.12);
   }
-  
+
   @media screen and (min-width: 767px) {
     .popup__form {
       padding: 25px 40px 0;
@@ -18,21 +18,21 @@
       max-width: 612px;
     }
   }
-  
-    .popup__form::-webkit-scrollbar-track {
-    background-color:rgba(0, 0, 0, 0)
-    }
-  
-    .popup__form::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 0px;
-    border-radius: 0px;
-    background-color:#6dc0c8;
-    }
-  
-    .popup__form::-webkit-scrollbar-thumb:hover{
-    background-color:#56999f;
-    }
-  
-    .popup__form::-webkit-scrollbar{
-    width: 4px;
-    }
+
+.popup__form::-webkit-scrollbar-track {
+  background-color:rgba(0, 0, 0, 0);
+}
+
+.popup__form::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 0px;
+  border-radius: 0px;
+  background-color:#6dc0c8;
+}
+
+.popup__form::-webkit-scrollbar-thumb:hover{
+  background-color:#56999f;
+}
+
+.popup__form::-webkit-scrollbar{
+  width: 4px;
+}
